refactor: remove FlyCommand and improve code readability
- Removed the `FlyCommand` class from the `Lobby` module as it is no longer used and the corresponding command has been removed from `plugin.yml`.
- Replaced unnecessary complex conditional checks with simplified and concise logic in multiple areas for better maintainability.
- Made various fields in multiple classes immutable by marking them as `final` to enforce immutability and improve code stability.
- Simplified redundant type casting by leveraging modern Java syntax improvements (e.g., `instanceof` enhancements).
- Removed unused return statements to clean up code and eliminate unnecessary operations throughout the codebase.

Author: Jonathan Bull